; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/usb/extr_kaweth.c_kaweth_close.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/usb/extr_kaweth.c_kaweth_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.kaweth_device = type { i32, i32, i64 }

@KAWETH_STATUS_CLOSING = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.net_device*)* @kaweth_close to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @kaweth_close(%struct.net_device* %0) #0 {
  %2 = alloca %struct.net_device*, align 8
  %3 = alloca %struct.kaweth_device*, align 8
  store %struct.net_device* %0, %struct.net_device** %2, align 8
  %4 = load %struct.net_device*, %struct.net_device** %2, align 8
  %5 = call %struct.kaweth_device* @netdev_priv(%struct.net_device* %4)
  store %struct.kaweth_device* %5, %struct.kaweth_device** %3, align 8
  %6 = load %struct.net_device*, %struct.net_device** %2, align 8
  %7 = call i32 @netif_stop_queue(%struct.net_device* %6)
  %8 = load %struct.kaweth_device*, %struct.kaweth_device** %3, align 8
  %9 = getelementptr inbounds %struct.kaweth_device, %struct.kaweth_device* %8, i32 0, i32 2
  store i64 0, i64* %9, align 8
  %10 = load i32, i32* @KAWETH_STATUS_CLOSING, align 4
  %11 = load %struct.kaweth_device*, %struct.kaweth_device** %3, align 8
  %12 = getelementptr inbounds %struct.kaweth_device, %struct.kaweth_device* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = or i32 %13, %10
  store i32 %14, i32* %12, align 4
  %15 = load %struct.kaweth_device*, %struct.kaweth_device** %3, align 8
  %16 = call i32 @kaweth_kill_urbs(%struct.kaweth_device* %15)
  %17 = load i32, i32* @KAWETH_STATUS_CLOSING, align 4
  %18 = xor i32 %17, -1
  %19 = load %struct.kaweth_device*, %struct.kaweth_device** %3, align 8
  %20 = getelementptr inbounds %struct.kaweth_device, %struct.kaweth_device* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = and i32 %21, %18
  store i32 %22, i32* %20, align 4
  %23 = load %struct.kaweth_device*, %struct.kaweth_device** %3, align 8
  %24 = getelementptr inbounds %struct.kaweth_device, %struct.kaweth_device* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 8
  %26 = call i32 @usb_autopm_enable(i32 %25)
  ret i32 0
}

declare dso_local %struct.kaweth_device* @netdev_priv(%struct.net_device*) #1

declare dso_local i32 @netif_stop_queue(%struct.net_device*) #1

declare dso_local i32 @kaweth_kill_urbs(%struct.kaweth_device*) #1

declare dso_local i32 @usb_autopm_enable(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
